--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>آکادمی اکوتوریسم ژوان</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="zhooaan academy" name="keywords">
+    <meta content="zhooaan academy" name="description">
 
     <!-- Favicon -->
     <link href="img/icon.png rel="icon">
